Main page update (html + css)

--- a/app/index.html
+++ b/app/index.html
@@ -144,19 +144,18 @@
             <div class="hero__item-inner">
               <div class="hero__item-data">
                 <h2 class="hero__title">
-                  Центр помощи и развития для женщин Ильзиры Валиахметовой
-                  Ярдэмче (помощница)
+                  Мы помогаем женщинам в трудных жизненных ситуациях
                 </h2>
                 <h3 class="hero__subtitle">
-                  Искусственный интеллект подберет Вам специалиста в зависимости
-                  от вашей ситуации на основе жизненного опыта других женщин
+                  Помощь и поддержка в кризисных ситуациях, консультации
+                  специалистов, индивидуальный подход к каждой
                 </h3>
                 <div class="hero__btns">
                   <a href="#" class="hero__btn btn btn--green"
                     >Получить помощь</a
                   >
                   <a href="#" class="hero__btn hero__btn--donate btn btn--green"
-                    >Пожертвовать</a
+                    >Поддержать проект</a
                   >
                 </div>
               </div>
@@ -173,8 +172,10 @@
                 src="./images/descr-bg-1.svg"
                 alt=""
               />
-              <div class="descr__block-content descr__block-content--left">
-                <h2 class="descr__block-title title-main">О центре</h2>
+              <!--               <div class="descr__block-content descr__block-content--left">
+                <h2 class="descr__block-title title-main">
+                  Готова помогать / присоединиться?
+                </h2>
                 <p class="descr__block-text">
                   Ярдэм переводится с татарского - ПОМОЩЬ, а ярдэмчé -
                   помощница. Этот проект создан специально для того, чтобы стать
@@ -195,30 +196,60 @@
                 <div class="descr__block-btns">
                   <a href="#" class="descr__btn btn btn--green">Подробнее</a>
                 </div>
-              </div>
+              </div> -->
             </div>
             <div class="descr__block descr__block--right">
               <div class="descr__block-content">
                 <h2 class="descr__block-title title-main">
-                  Помогаем женщинам, попавшим в&nbsp;трудную жизненную ситуацию
+                  Центр помощи и&nbsp;развития Ярдэмче &mdash;&nbsp;это опора
+                  для женщины, чтобы сделать ее&nbsp;жизнь лучше
                 </h2>
                 <p class="descr__block-text descr__block-text--right">
-                  Комплексная помощь и поддержка для женщин, консультации
-                  специалистов , индивидуальный подход к каждой. Большой выбор
-                  бесплатных услуг.
+                  Женщины в России сталкиваются с огромным количеством проблем
+                  из-за гендерного неравенства.<br />
+                  Мы помогаем женщинам и объединяем тех, кто готов помогать.
                 </p>
+                <ul class="descr__block-list">
+                  <li class="descr__block-listitem">
+                    Зарплаты у женщин в среднем на 31% ниже чем у мужчин
+                  </li>
+                  <li class="descr__block-listitem">
+                    Женщины в 2,5 раза больше времени тратят на заботу о близких
+                  </li>
+                  <li class="descr__block-listitem">
+                    2 из 3 убитых россиянок - жертвы домашнего насилия.
+                  </li>
+                </ul>
                 <div class="descr__block-btns">
-                  <a href="#" class="descr__btn btn btn--green"
-                    >Получить помощь</a
-                  >
-                  <a href="#" class="descr__btn btn btn--green">Пожертвовать</a>
+                  <a href="#" class="descr__btn btn btn--green">Подробнее</a>
                 </div>
               </div>
-              <img
+              <div class="descr__block-content">
+                <h2 class="descr__block-title title-main">
+                  Готова помогать / присоединиться?
+                </h2>
+                <ul class="descr__block-stat">
+                  <li class="descr__block-statitem">
+                    <span>> 200</span>женщин получили помощь
+                  </li>
+                  <li class="descr__block-statitem">
+                    <span>> 20</span>фондов в сотрудничестве
+                  </li>
+                  <li class="descr__block-statitem">
+                    <span>> 50</span>мероприятий проведено
+                  </li>
+                </ul>
+                <div class="descr__block-btns">
+                  <a href="#" class="descr__btn btn btn--green"
+                    >Присоединиться</a
+                  >
+                </div>
+              </div>
+              <!--               <img
                 class="descr__block-img descr__block-img--right"
                 src="./images/descr-bg-2.svg"
                 alt=""
-              />
+              /> -->
             </div>
           </div>
         </div>
@@ -230,34 +261,66 @@
             <ul class="help__list">
               <li class="help__list-item">
                 <a href="#" class="help__item-link">
-                  <span>Юридическая помощь</span
-                  ><svg class="help__link-icon" width="27" height="8">
-                    <use xlink:href="#icon-arrow-tiny"></use>
-                  </svg>
+                  <div class="help__item-header">
+                    <h6 class="help__item-title">Психологическая помощь</h6>
+                    <p class="help__item-text">
+                      Получите первую психологическую помощь по любому вопросу
+                    </p>
+                  </div>
+                  <div class="help__item-footer">
+                    <span>Записаться к психологу</span
+                    ><svg class="help__link-icon" width="27" height="8">
+                      <use xlink:href="#icon-arrow-tiny"></use>
+                    </svg>
+                  </div>
                 </a>
               </li>
               <li class="help__list-item">
                 <a href="#" class="help__item-link">
-                  <span>Другая помощь</span
-                  ><svg class="help__link-icon" width="27" height="8">
-                    <use xlink:href="#icon-arrow-tiny"></use>
-                  </svg>
+                  <div class="help__item-header">
+                    <h6 class="help__item-title">Юридическая помощь</h6>
+                    <p class="help__item-text">
+                      Получите бесплатную юридическую консультацию
+                    </p>
+                  </div>
+                  <div class="help__item-footer">
+                    <span>Записаться к юристу</span
+                    ><svg class="help__link-icon" width="27" height="8">
+                      <use xlink:href="#icon-arrow-tiny"></use>
+                    </svg>
+                  </div>
                 </a>
               </li>
               <li class="help__list-item">
                 <a href="#" class="help__item-link">
-                  <span>Психологическая помощь</span
-                  ><svg class="help__link-icon" width="27" height="8">
-                    <use xlink:href="#icon-arrow-tiny"></use>
-                  </svg>
+                  <div class="help__item-header">
+                    <h6 class="help__item-title">Другая помощь</h6>
+                    <p class="help__item-text">
+                      Помощь от специалистов других направлений и гос. структур
+                    </p>
+                  </div>
+                  <div class="help__item-footer">
+                    <span>Выбрать специалиста</span
+                    ><svg class="help__link-icon" width="27" height="8">
+                      <use xlink:href="#icon-arrow-tiny"></use>
+                    </svg>
+                  </div>
                 </a>
               </li>
               <li class="help__list-item">
                 <a href="#" class="help__item-link">
-                  <span>Фонды-партнеры</span
-                  ><svg class="help__link-icon" width="27" height="8">
-                    <use xlink:href="#icon-arrow-tiny"></use>
-                  </svg>
+                  <div class="help__item-header">
+                    <h6 class="help__item-title">Фонды-партнеры</h6>
+                    <p class="help__item-text">
+                      Найдите благотворительную организацию в своем городе
+                    </p>
+                  </div>
+                  <div class="help__item-footer">
+                    <span>Посмотреть все</span
+                    ><svg class="help__link-icon" width="27" height="8">
+                      <use xlink:href="#icon-arrow-tiny"></use>
+                    </svg>
+                  </div>
                 </a>
               </li>
             </ul>
@@ -271,15 +334,22 @@
               <div class="poll__left"></div>
               <div class="poll__right">
                 <h2 class="poll__title title-main">
-                  Пройдите короткий опрос, и мы подберем для Вас
-                  специализированный центр
+                  Затрудняетесь с выбором? Мы подберем для вас помощь
                 </h2>
                 <p class="poll__text">
-                  Это искусственный интеллект, и он быстро подберет для Вас
-                  необходимую помощь среди благотворительных организаций России
+                  Свяжитесь с нами и расскажите о своей проблеме
                 </p>
                 <div class="poll__btn-block">
-                  <a href="#" class="poll__btn btn btn--green">Попробовать</a>
+                  <a
+                    href="#"
+                    class="poll__btn poll__btn--whatsapp btn btn--green"
+                    >Whats App</a
+                  >
+                  <a
+                    href="#"
+                    class="poll__btn poll__btn--telegram btn btn--green"
+                    >Telegram</a
+                  >
                 </div>
               </div>
             </div>
@@ -292,7 +362,7 @@
             <h2 class="funds__title title-main">
               Фонды и благотворительные организации
             </h2>
-            <a href="#" class="funds__top-link">Смотреть все</a>
+            <!-- <a href="#" class="funds__top-link">Смотреть все</a> -->
           </div>
           <p class="funds__text">
             Здесь собраны фонды по всей России, с которыми мы сотрудничаем. Вы
@@ -301,111 +371,124 @@
           </p>
           <ul class="funds__list">
             <li class="funds__item fund">
-              <div class="fund__header">
-                <div class="fund__header-wrapper">
+              <a href="#" class="fund__item-link">
+                <div class="fund__inner">
                   <img
                     src="./images/fund-1.png"
                     alt="Логотип фонда"
                     class="fund__img"
                   />
-                  <div class="fund__header-inner">
-                    <div class="fund__left">
-                      <h3 class="fund__title">Живи сейчас</h3>
-                      <p class="fund__category">Красота и здоровье</p>
-                    </div>
+
+                  <div class="fund__right">
+                    <h3 class="fund__title">Живи сейчас</h3>
+                    <p class="fund__category">Красота и здоровье</p>
                   </div>
                 </div>
-              </div>
-              <div class="fund__info">
-                <p class="fund__info-text">
-                  Благотворительный фонд помощи людям с боковым амиотрофическим
-                  склерозом и другими нейромышечными заболеваниями «Живи сейчас»
-                  — единственная в России некоммерческая организация,
-                  поддерживающая развитие системной помощи пациентам с БАС.
-                </p>
-              </div>
+              </a>
             </li>
             <li class="funds__item fund">
-              <div class="fund__header">
-                <div class="fund__header-wrapper">
+              <a href="#" class="fund__item-link">
+                <div class="fund__inner">
                   <img
                     src="./images/fund-2.png"
                     alt="Логотип фонда"
                     class="fund__img"
                   />
-                  <div class="fund__header-inner">
-                    <div class="fund__left">
-                      <h3 class="fund__title">Аистенок</h3>
-                      <p class="fund__category">Красота и здоровье</p>
-                    </div>
+
+                  <div class="fund__right">
+                    <h3 class="fund__title">Аистенок</h3>
+                    <p class="fund__category">Красота и здоровье</p>
                   </div>
                 </div>
-              </div>
-              <div class="fund__info">
-                <p class="fund__info-text">
-                  Организация «Аистенок» основана в 2003 году. Задачи:
-                  Сопровождение семей с детьми (родными и приемными) с тяжелым
-                  материальным положением, содействие устройству в новые семьи
-                  детей-сирот и детей, оставшихся без попечения родителей,
-                  предотвращение отказов от детей.
-                </p>
-              </div>
+              </a>
             </li>
             <li class="funds__item fund">
-              <div class="fund__header">
-                <div class="fund__header-wrapper">
-                  <img
-                    src="./images/fund-2.png"
-                    alt="Логотип фонда"
-                    class="fund__img"
-                  />
-                  <div class="fund__header-inner">
-                    <div class="fund__left">
-                      <h3 class="fund__title">Аистенок</h3>
-                      <p class="fund__category">Красота и здоровье</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="fund__info">
-                <p class="fund__info-text">
-                  Организация «Аистенок» основана в 2003 году. Задачи:
-                  Сопровождение семей с детьми (родными и приемными) с тяжелым
-                  материальным положением, содействие устройству в новые семьи
-                  детей-сирот и детей, оставшихся без попечения родителей,
-                  предотвращение отказов от детей.
-                </p>
-              </div>
-            </li>
-            <li class="funds__item fund">
-              <div class="fund__header">
-                <div class="fund__header-wrapper">
+              <a href="#" class="fund__item-link">
+                <div class="fund__inner">
                   <img
                     src="./images/fund-1.png"
                     alt="Логотип фонда"
                     class="fund__img"
                   />
-                  <div class="fund__header-inner">
-                    <div class="fund__left">
-                      <h3 class="fund__title">Живи сейчас</h3>
-                      <p class="fund__category">Красота и здоровье</p>
-                    </div>
+
+                  <div class="fund__right">
+                    <h3 class="fund__title">Живи сейчас</h3>
+                    <p class="fund__category">Красота и здоровье</p>
                   </div>
                 </div>
-              </div>
-              <div class="fund__info">
-                <p class="fund__info-text">
-                  Благотворительный фонд помощи людям с боковым амиотрофическим
-                  склерозом и другими нейромышечными заболеваниями «Живи сейчас»
-                  — единственная в России некоммерческая организация,
-                  поддерживающая развитие системной помощи пациентам с БАС.
-                </p>
-              </div>
+              </a>
             </li>
           </ul>
           <div class="funds__btn-block">
-            <a href="#" class="funds__btn btn btn--green">Показать еще</a>
+            <a href="#" class="funds__btn btn btn--green">Смотреть все</a>
           </div>
+        </div>
+      </section>
+      <section class="events">
+        <div class="container">
+          <h2 class="events__title">Наши мероприятия</h2>
+          <ul class="events__list">
+            <li class="events__item">
+              <a href="#" class="event__item-link">
+                <img
+                  src="./images/event-1.jpg"
+                  alt="Фото мероприятия"
+                  class="events__item-img"
+                />
+                <h6 class="events__item-title">Мероприятие #1</h6>
+              </a>
+            </li>
+            <li class="events__item">
+              <a href="#" class="event__item-link">
+                <img
+                  src="./images/event-2.jpg"
+                  alt="Фото мероприятия"
+                  class="events__item-img"
+                />
+                <h6 class="events__item-title">Мероприятие #1</h6>
+              </a>
+            </li>
+            <li class="events__item">
+              <a href="#" class="event__item-link">
+                <img
+                  src="./images/event-3.jpg"
+                  alt="Фото мероприятия"
+                  class="events__item-img"
+                />
+                <h6 class="events__item-title">Мероприятие #1</h6>
+              </a>
+            </li>
+            <li class="events__item">
+              <a href="#" class="event__item-link">
+                <img
+                  src="./images/event-4.jpg"
+                  alt="Фото мероприятия"
+                  class="events__item-img"
+                />
+                <h6 class="events__item-title">Мероприятие #1</h6>
+              </a>
+            </li>
+            <li class="events__item">
+              <a href="#" class="event__item-link">
+                <img
+                  src="./images/event-5.jpg"
+                  alt="Фото мероприятия"
+                  class="events__item-img"
+                />
+                <h6 class="events__item-title">Мероприятие #1</h6>
+              </a>
+            </li>
+            <li class="events__item">
+              <a href="#" class="event__item-link">
+                <img
+                  src="./images/event-6.jpg"
+                  alt="Фото мероприятия"
+                  class="events__item-img"
+                />
+                <h6 class="events__item-title">Мероприятие #1</h6>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
