Main page and index-redesign page: fixes (html + css)

--- a/app/index-redesign.html
+++ b/app/index-redesign.html
@@ -115,19 +115,21 @@
               class="intro__slider-item swiper-slide swiper-slide--top"
               style="background-image: url('./images/intro-bg-1.jpg')"
             >
-              <div class="container">
-                <div class="intro__item-inner">
-                  <div class="intro__item-data">
-                    <h1 class="intro__title">ЭНИ маркетплейс для женщин</h1>
-                    <h2 class="intro__subtitle">
-                      Искусственный интеллект подберет Вам специалиста в
-                      зависимости от вашей ситуации на основе жизненного опыта
-                      других женщин
-                    </h2>
-                    <div class="intro__btn-block">
-                      <a href="#" class="intro__btn btn--pink btn"
-                        >Попробовать</a
-                      >
+              <div class="intro__item-wrapper">
+                <div class="container">
+                  <div class="intro__item-inner">
+                    <div class="intro__item-data">
+                      <h1 class="intro__title">ЭНИ маркетплейс для женщин</h1>
+                      <h2 class="intro__subtitle">
+                        Искусственный интеллект подберет Вам специалиста в
+                        зависимости от вашей ситуации на основе жизненного опыта
+                        других женщин
+                      </h2>
+                      <div class="intro__btn-block">
+                        <a href="#" class="intro__btn btn--pink btn"
+                          >Попробовать</a
+                        >
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -137,19 +139,21 @@
               class="intro__slider-item swiper-slide swiper-slide--top"
               style="background-image: url('./images/intro-bg-2.jpg')"
             >
-              <div class="container">
-                <div class="intro__item-inner">
-                  <div class="intro__item-data">
-                    <h1 class="intro__title">ЭНИ маркетплейс для женщин</h1>
-                    <h2 class="intro__subtitle">
-                      Искусственный интеллект подберет Вам специалиста в
-                      зависимости от вашей ситуации на основе жизненного опыта
-                      других женщин
-                    </h2>
-                    <div class="intro__btn-block">
-                      <a href="#" class="intro__btn btn--pink btn"
-                        >Попробовать</a
-                      >
+              <div class="intro__item-wrapper">
+                <div class="container">
+                  <div class="intro__item-inner">
+                    <div class="intro__item-data">
+                      <h1 class="intro__title">ЭНИ маркетплейс для женщин</h1>
+                      <h2 class="intro__subtitle">
+                        Искусственный интеллект подберет Вам специалиста в
+                        зависимости от вашей ситуации на основе жизненного опыта
+                        других женщин
+                      </h2>
+                      <div class="intro__btn-block">
+                        <a href="#" class="intro__btn btn--pink btn"
+                          >Попробовать</a
+                        >
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -159,19 +163,21 @@
               class="intro__slider-item swiper-slide swiper-slide--top"
               style="background-image: url('./images/intro-bg-3.jpg')"
             >
-              <div class="container">
-                <div class="intro__item-inner">
-                  <div class="intro__item-data">
-                    <h1 class="intro__title">ЭНИ маркетплейс для женщин</h1>
-                    <h2 class="intro__subtitle">
-                      Искусственный интеллект подберет Вам специалиста в
-                      зависимости от вашей ситуации на основе жизненного опыта
-                      других женщин
-                    </h2>
-                    <div class="intro__btn-block">
-                      <a href="#" class="intro__btn btn--pink btn"
-                        >Попробовать</a
-                      >
+              <div class="intro__item-wrapper">
+                <div class="container">
+                  <div class="intro__item-inner">
+                    <div class="intro__item-data">
+                      <h1 class="intro__title">ЭНИ маркетплейс для женщин</h1>
+                      <h2 class="intro__subtitle">
+                        Искусственный интеллект подберет Вам специалиста в
+                        зависимости от вашей ситуации на основе жизненного опыта
+                        других женщин
+                      </h2>
+                      <div class="intro__btn-block">
+                        <a href="#" class="intro__btn btn--pink btn"
+                          >Попробовать</a
+                        >
+                      </div>
                     </div>
                   </div>
                 </div>
