--- a/app/index.html
+++ b/app/index.html
@@ -206,7 +206,9 @@
                 </h2>
                 <p class="descr__block-text descr__block-text--right">
                   Женщины в России сталкиваются с огромным количеством проблем
-                  из-за гендерного неравенства.<br />
+                  из-за гендерного неравенства.
+                </p>
+                <p class="descr__block-text descr__block-text--right">
                   Мы помогаем женщинам и объединяем тех, кто готов помогать.
                 </p>
                 <ul class="descr__block-list">
