Index-redesign changes (html + css)

--- a/app/index-old.html
+++ b/app/index-old.html
@@ -279,7 +279,7 @@
           <ul class="description__packages-list">
             <li class="description__package-item">
               <div class="description__package-inner">
-                <p class="description__package-quantity">2 услуги</p>
+                <p class="description__package-quantity"></p>
                 <div class="description__package-bottom">
                   <span class="description__package-price">3 000 ₽</span>
                   <a href="#" class="description__package-arrow">
