--- a/app/index-redesign.html
+++ b/app/index-redesign.html
@@ -119,12 +119,8 @@
                 <div class="container">
                   <div class="intro__item-inner">
                     <div class="intro__item-data">
-                      <h1 class="intro__title">ЭНИ маркетплейс для женщин</h1>
-                      <h2 class="intro__subtitle">
-                        Искусственный интеллект подберет Вам специалиста в
-                        зависимости от вашей ситуации на основе жизненного опыта
-                        других женщин
-                      </h2>
+                      <h1 class="intro__title">Маркетплейс для женщин «ЭНИ»</h1>
+                      <h2 class="intro__subtitle">Стань частью сообщества</h2>
                       <div class="intro__btn-block">
                         <a href="#" class="intro__btn btn--pink btn"
                           >Попробовать</a
@@ -143,12 +139,8 @@
                 <div class="container">
                   <div class="intro__item-inner">
                     <div class="intro__item-data">
-                      <h1 class="intro__title">ЭНИ маркетплейс для женщин</h1>
-                      <h2 class="intro__subtitle">
-                        Искусственный интеллект подберет Вам специалиста в
-                        зависимости от вашей ситуации на основе жизненного опыта
-                        других женщин
-                      </h2>
+                      <h1 class="intro__title">Маркетплейс для женщин «ЭНИ»</h1>
+                      <h2 class="intro__subtitle">Стань частью сообщества</h2>
                       <div class="intro__btn-block">
                         <a href="#" class="intro__btn btn--pink btn"
                           >Попробовать</a
@@ -167,12 +159,8 @@
                 <div class="container">
                   <div class="intro__item-inner">
                     <div class="intro__item-data">
-                      <h1 class="intro__title">ЭНИ маркетплейс для женщин</h1>
-                      <h2 class="intro__subtitle">
-                        Искусственный интеллект подберет Вам специалиста в
-                        зависимости от вашей ситуации на основе жизненного опыта
-                        других женщин
-                      </h2>
+                      <h1 class="intro__title">Маркетплейс для женщин «ЭНИ»</h1>
+                      <h2 class="intro__subtitle">Стань частью сообщества</h2>
                       <div class="intro__btn-block">
                         <a href="#" class="intro__btn btn--pink btn"
                           >Попробовать</a
@@ -191,62 +179,104 @@
       <section class="info">
         <div class="container">
           <h2 class="info__title subtitle">
-            Когда женщина счастлива, счастлив весь весь мир. Эни - проект
-            созданный с заботой о женщине, который дает возможность...
+            ЭНИ - проект созданный с заботой о женщине для того, чтобы облегчить
+            и улучшить ее жизнь. Здесь вы найдете специалистов, услуги и товары,
+            в которых нуждаетесь на данный момент.
           </h2>
           <p class="info__text">
-            А еще у нас есть свой благотворительный фонд, где мы помогаем
-            женщинам в сложных ситуациях
+            Когда женщина счастлива, счастлив весь весь мир.
           </p>
-          <div class="info__btn-block">
-            <a href="#" class="info__btn btn--pink btn">Подробнее</a>
+
+          <div class="info__banner banner">
+            <div class="banner__inner">
+              <h3 class="banner__title">
+                Центр помощи и развития для женщин Ильзиры Валиахметовой
+              </h3>
+              <p class="banner__text">
+                Также у нас есть фонды партнеры, которые помогут вам
+                безвозмездно
+              </p>
+              <a href="#" class="banner__more-link">
+                <span>Посмотреть</span
+                ><svg class="banner__more-icon" width="26" height="16">
+                  <use xlink:href="#icon-arrow-more"></use></svg
+              ></a>
+            </div>
           </div>
           <div class="info__inner">
-            <div class="info__left">
-              <h2 class="info__title info__title--left subtitle">
-                Чем мы можем Вам помочь:
-              </h2>
-              <p class="info__text info__text--left">
-                Мы знаем как порой бывает сложно женщине, поэтому создали этот
-                проект для того, чтобы стать опорой для Вас. Поможем сделать
-                первые шаги, определить направление развития. Найти специалиста,
-                услуги и товары в которых Вы нуждаетесь на данный момент.
-              </p>
-              <ul class="info__list">
-                <li class="info__list-item">
-                  <a href="#" class="info__item-link">
-                    <span>Специалисты</span
-                    ><svg class="info__link-icon" width="27" height="8">
-                      <use xlink:href="#icon-arrow-tiny"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="info__list-item">
-                  <a href="#" class="info__item-link">
-                    <span>Товары и услуги</span
-                    ><svg class="info__link-icon" width="27" height="8">
-                      <use xlink:href="#icon-arrow-tiny"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="info__list-item">
-                  <a href="#" class="info__item-link">
-                    <span>Благотворительный фонд Ярдэмче</span
-                    ><svg class="info__link-icon" width="27" height="8">
-                      <use xlink:href="#icon-arrow-tiny"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
-            </div>
-            <div class="info__right">
-              <img
-                class="info__img"
-                src="./images/info-img.svg"
-                alt="Иллюстрация девушки"
-              />
-            </div>
+            <a href="#">
+              <div
+                class="info__item"
+                style="background-image: url('./images/info-img-1.jpg')"
+              >
+                <div class="info__item-inner">
+                  <h6 class="info__item-title">Специалисты</h6>
+                </div>
+              </div>
+            </a>
+            <a href="#">
+              <div
+                class="info__item"
+                style="background-image: url('./images/info-img-2.jpg')"
+              >
+                <div class="info__item-inner">
+                  <h6 class="info__item-title">Товары</h6>
+                </div>
+              </div>
+            </a>
           </div>
+        </div>
+      </section>
+
+      <section class="description">
+        <div class="container">
+          <h2 class="description__title subtitle">Комплексный подход</h2>
+          <p class="description__text">
+            Получить услуги наших специалистов можно либо обратившись к ним
+            напрямую, либо купив более выгодный пакет:
+          </p>
+          <ul class="description__packages-list">
+            <li class="description__package-item">
+              <div class="description__package-inner">
+                <p class="description__package-quantity">4 услуги</p>
+                <div class="description__package-bottom">
+                  <span class="description__package-price">3 000 ₽</span>
+                  <a href="#" class="description__package-arrow">
+                    <svg width="30" height="16">
+                      <use xlink:href="#icon-arrow-package"></use>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </li>
+            <li class="description__package-item">
+              <div class="description__package-inner">
+                <p class="description__package-quantity">4 услуги</p>
+                <div class="description__package-bottom">
+                  <span class="description__package-price">5 000 ₽</span>
+                  <a href="#" class="description__package-arrow">
+                    <svg width="30" height="16">
+                      <use xlink:href="#icon-arrow-package"></use>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </li>
+
+            <li class="description__package-item">
+              <div class="description__package-inner">
+                <p class="description__package-quantity">8 услуг</p>
+                <div class="description__package-bottom">
+                  <span class="description__package-price">9 000 ₽</span>
+                  <a href="#" class="description__package-arrow">
+                    <svg width="30" height="16">
+                      <use xlink:href="#icon-arrow-package"></use>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="give">
@@ -270,7 +300,7 @@
                   <li class="give__list-item">- постоянный поток клиентов</li>
                   <li class="give__list-item">- продвижение и PR</li>
                   <li class="give__list-item">
-                    - возможность участвовать в благотворительных мериприятиях
+                    - возможность участвовать в благотворительных мероприятиях
                   </li>
                   <li class="give__list-item">
                     - личная страничка профиля с портфолио и реальными отзывами
@@ -283,52 +313,6 @@
           </div>
         </div>
       </section>
-      <section class="complex">
-        <div class="complex__wrapper">
-          <div class="container">
-            <h2 class="complex__title subtitle">Комплексный подход</h2>
-            <p class="complex__text">
-              Получить услуги наших специалистов можно либо обратившись к ним
-              напрямую, либо купив более выгодный пакет:
-            </p>
-            <ul class="complex__list">
-              <li class="complex__list-item">
-                <a href="#" class="complex__item-link">
-                  <span>Тариф «2 специалиста»</span
-                  ><svg class="complex__link-icon" width="27" height="8">
-                    <use xlink:href="#icon-arrow-tiny"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="complex__list-item">
-                <a href="#" class="complex__item-link">
-                  <span>Тариф «4 специалиста»</span
-                  ><svg class="complex__link-icon" width="27" height="8">
-                    <use xlink:href="#icon-arrow-tiny"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="complex__list-item">
-                <a href="#" class="complex__item-link">
-                  <span>Тариф «8 специалистов»</span
-                  ><svg class="complex__link-icon" width="27" height="8">
-                    <use xlink:href="#icon-arrow-tiny"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="complex__list-item">
-                <a href="#" class="complex__item-link">
-                  <span>Тариф «20+ специалистов»</span
-                  ><svg class="complex__link-icon" width="27" height="8">
-                    <use xlink:href="#icon-arrow-tiny"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </section>
-
       <section class="opinions">
         <div class="container">
           <h2 class="opinions__title subtitle">Отзывы наших клиентов</h2>
@@ -638,6 +622,9 @@
               </div>
             </li>
           </ul>
+          <div class="opinion__btn-wrapper">
+            <a href="#" class="opinion__btn btn btn--pink">Оставить отзыв</a>
+          </div>
         </div>
       </section>
 
